// Copyright 2025 Patryk Rostkowski
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cache.v1alpha;

option go_package = "github.com/patrostkowski/protocache/pkg/api/cache/v1alpha";

service CacheService {
  rpc List(ListRequest) returns (ListResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc Clear(ClearRequest) returns (ClearResponse);
  rpc Stats(StatsRequest) returns (StatsResponse);
}

message ListRequest {}

message ListResponse {
  repeated string keys = 2;
}

message SetRequest {
  string key = 1;
  bytes value = 2;
}

message SetResponse {
  bool success = 1;
  string message = 2;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bool found = 1;
  string message = 2;
  bytes value = 3;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message ClearRequest {}

message ClearResponse {
  bool success = 1;
  string message = 2;
}

message StatsRequest {}

message StatsResponse {
  uint64 key_count = 1;
  uint64 memory_usage_bytes = 2;
  string go_version = 3;
  string timestamp = 4;
}

